--- a/highlight-node/tsconfig.cjs.json
+++ b/highlight-node/tsconfig.cjs.json
@@ -4,5 +4,6 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"outDir": "dist"
-	}
+	},
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
