--- a/package.json
+++ b/package.json
@@ -1,46 +1,61 @@
 {
 	"name": "highlight",
+	"private": true,
 	"version": "1.0.0",
-	"main": "index.js",
 	"repository": "git@github.com:highlight-run/highlight.git",
 	"author": "Highlight",
 	"license": "MIT",
 	"dependencies": {
 		"concurrently": "^6.5.1"
 	},
+	"workspaces": [
+		"client",
+		"experiments/chrome-extension",
+		"experiments/performance",
+		"firstload",
+		"frontend",
+		"highlight-next",
+		"highlight-node",
+		"render",
+		"rrweb/packages/*",
+		"sourcemap-uploader"
+	],
 	"scripts": {
-		"prepare": "husky install",
-		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf node_modules' 'cd client && rm -rf node_modules' 'cd firstload && rm -rf node_modules'",
-		"frontend:install": "yarn && concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
-		"frontend:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload",
-		"dev": "run-p --print-label --race dev:*",
-		"dev:backend": "cd backend && make start",
-		"dev:frontend": "cd frontend && yarn dev",
-		"dev:client": "cd client && yarn dev",
-		"dev:client-gql": "cd client && yarn gql",
-		"dev:firstload": "cd firstload && yarn dev",
-		"dev:redis": "redis-server",
-		"generate": "hygen",
-		"g": "yarn generate",
-		"format": "prettier --write --ignore-unknown . \"!./data\"",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"build:all": "yarn turbo run prepublish build",
+		"build:backend": "cd backend && go build",
+		"build:frontend": "yarn turbo run build --filter frontend...",
 		"ci:backend": "cd backend && doppler run -- ./backend",
-		"ci:build": "cd backend && go build",
-		"ci:install": "yarn ci:install:go && yarn ci:install:yarn",
-		"ci:install:go": "cd backend && go build",
-		"ci:install:yarn": "yarn --prefer-offline && cd frontend && yarn --prefer-offline && cd ../client && yarn --prefer-offline",
-		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
+		"ci:build": "run-p --print-label build:frontend build:backend",
+		"ci:frontend": "yarn turbo run dev --filter frontend --filter client --filter firstload --only",
 		"cy:run": "cypress run",
-		"cy:run:chrome": "cypress run --headed --browser chrome"
+		"cy:run:chrome": "cypress run --headed --browser chrome",
+		"dev": "run-p --print-label --race 'dev:*'",
+		"dev:backend": "cd backend && make start",
+		"dev:frontend": "yarn turbo run dev --filter frontend...",
+		"dev:redis": "redis-server",
+		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"format:all": "prettier --write --ignore-unknown . \"!./data\"",
+		"frontend:start": "yarn dev:frontend",
+		"g": "yarn generate",
+		"generate": "hygen",
+		"prepare": "husky install && patch-package",
+		"publish:all": "run-p --print-label publish:turbo publish:render",
+		"publish:turbo": "changeset version && changeset publish",
+		"publish:render": "yarn workspace render publish",
+		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
+		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
 	},
 	"devDependencies": {
-		"@types/node": "^18.7.14",
+		"@changesets/cli": "^2.24.4",
 		"chalk": "^5.0.1",
 		"cypress": "^10.8.0",
 		"husky": "^8.0.1",
 		"hygen": "^6.2.7",
 		"npm-run-all": "^4.1.5",
+		"patch-package": "^6.4.7",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3"
-	}
+		"pretty-quick": "^3.1.3",
+		"turbo": "^1.5.4"
+	},
+	"packageManager": "yarn@3.2.3"
 }
