--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,16 @@
 {
 	"name": "@highlight-run/client",
 	"private": true,
-	"version": "1.2.15",
-	"description": "rollup setup for writing a javascript library and making it availabe as script or npm package",
+	"version": "1.3.0",
+	"description": "rollup setup for writing a javascript library and making it available as script or npm package",
 	"main": "dist/index.js",
-	"module": "dist/index.mjs",
+	"module": "dist/indexESM.js",
+	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"build": "rollup -c",
+		"build": "tsc && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
-		"gql": "graphql-codegen --config --watch codegen.yml",
+		"dev:gql": "graphql-codegen --config --watch codegen.yml",
+		"codegen": "graphql-codegen --config codegen.yml",
 		"test": "jest --passWithNoTests"
 	},
 	"repository": {
@@ -27,6 +29,10 @@
 		"@graphql-codegen/typescript": "^2.7.2",
 		"@graphql-codegen/typescript-graphql-request": "^4.5.2",
 		"@graphql-codegen/typescript-operations": "^2.5.2",
+		"@rollup/plugin-commonjs": "^22.0.1",
+		"@rollup/plugin-json": "^4.1.0",
+		"@rollup/plugin-node-resolve": "^13.3.0",
+		"@rollup/plugin-replace": "^4.0.0",
 		"@types/jest": "^26.0.20",
 		"@types/json-stringify-safe": "^5.0.0",
 		"@types/node": "^16.3.1",
@@ -37,22 +43,6 @@
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"jest": "^26.6.3",
 		"onchange": "^7.1.0",
-		"typescript": "^4.1.3"
-	},
-	"dependencies": {
-		"@highlight-run/fingerprintjs": "^3.3.5",
-		"@highlight-run/rrweb": "2.1.10",
-		"@rollup/plugin-commonjs": "^22.0.1",
-		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@rollup/plugin-replace": "^4.0.0",
-		"@rollup/plugin-typescript": "^8.3.3",
-		"error-stack-parser": "2.0.6",
-		"esbuild": "^0.14.47",
-		"graphql": "^16.5.0",
-		"graphql-request": "^4.3.0",
-		"graphql-tag": "^2.12.6",
-		"json-stringify-safe": "^5.0.1",
 		"rollup": "^2.75.7",
 		"rollup-plugin-consts": "^1.1.0",
 		"rollup-plugin-dev": "^2.0.4",
@@ -60,6 +50,17 @@
 		"rollup-plugin-filesize": "^9.1.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1",
+		"typescript": "^4.1.3"
+	},
+	"dependencies": {
+		"@highlight-run/fingerprintjs": "^3.3.5",
+		"@highlight-run/rrweb": "workspace:*",
+		"error-stack-parser": "2.0.6",
+		"esbuild": "^0.14.47",
+		"graphql": "^16.5.0",
+		"graphql-request": "^4.3.0",
+		"graphql-tag": "^2.12.6",
+		"json-stringify-safe": "^5.0.1",
 		"stacktrace-js": "2.0.2"
 	},
 	"resolutions": {
