--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"types": [],
+		"target": "ESNext",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
@@ -9,13 +10,19 @@
 		"baseUrl": "src",
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
+		"declaration": true,
+		"declarationDir": "dist",
+		"emitDeclarationOnly": true,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "react",
 		"downlevelIteration": true,
-		"rootDir": ".."
+		"composite": true
 	},
-	"include": ["src"]
+	"include": ["src"],
+	"exclude": ["src/**/*.test.tsx"],
+	"files": ["package.json"],
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
