--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "ESNext",
 		"lib": ["dom", "es2019", "dom.iterable", "esnext"],
 		"skipLibCheck": true,
 		"esModuleInterop": true,
@@ -31,5 +31,10 @@
 			"@lottie/*": ["./lottie/*"]
 		}
 	},
-	"exclude": ["**/node_modules/**", "**/build/**"]
+	"exclude": ["**/node_modules/**", "**/build/**"],
+	"references": [
+		{ "path": "../client" },
+		{ "path": "../firstload" },
+		{ "path": "../rrweb/packages/rrweb" }
+	]
 }
