--- a/highlight-next/tsconfig.esm.json
+++ b/highlight-next/tsconfig.esm.json
@@ -5,5 +5,6 @@
 		"module": "es6",
 		"outDir": "esm",
 		"removeComments": true
-	}
+	},
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
