--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -45,6 +45,9 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                  token: ${{ secrets.GH_REPO_TOKEN }}
+                  submodules: true
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
