--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 		"@apollo/client": "3.4.17",
 		"@babel/core": "^7.19.0",
 		"@datadog/browser-logs": "^4.13.0",
+		"@datadog/browser-rum": "^4.21.0",
 		"@fontsource/poppins": "^4.5.9",
 		"@frontapp/plugin-sdk": "^1.1.2",
 		"@highlight-run/client": "workspace:*",
