--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,7 @@
 				"REACT_APP_STRIPE_API_PK",
 				"REACT_APP_VERCEL_INTEGRATION_NAME",
 
+				"DISCORD_CLIENT_ID",
 				"LINEAR_CLIENT_ID",
 				"SLACK_CLIENT_ID",
 				"DD_CLIENT_TOKEN",
