--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,6 +90,7 @@
 		"build": "NODE_OPTIONS='--max-old-space-size=7168' vite build",
 		"sourcemaps": "npx --yes @highlight-run/sourcemap-uploader upload --apiKey \"${HIGHLIGHT_API_KEY}\" --path ./build",
 		"test": "TZ=UTC vitest --run",
+		"types:check": "tsc -noEmit",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
 		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
 	},
