--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -2,9 +2,10 @@
 	"name": "@highlight-run/next",
 	"version": "1.2.0",
 	"description": "Client for interfacing with Highlight in next.js",
-	"main": "dist/index.js",
+	"main": "dist/src/index.js",
 	"scripts": {
-		"build": "run-p build:cjs build:esm",
+		"build": "run-p build:zane",
+		"build:zane": "tsc -p tsconfig.json",
 		"build:cjs": "tsc -p tsconfig.cjs.json",
 		"build:dev": "run-s build",
 		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
@@ -14,9 +15,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"@highlight-run/node": "workspace:*",
+		"@highlight-run/sourcemap-uploader": "workspace:*",
 		"next": "12.1.6",
 		"npm-run-all": "4.1.5"
 	},
+	"type": "module",
 	"devDependencies": {
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
