--- a/sourcemap-uploader/package.json
+++ b/sourcemap-uploader/package.json
@@ -2,22 +2,33 @@
   "name": "@highlight-run/sourcemap-uploader",
   "version": "0.3.0",
   "description": "Command line tool to upload source maps to Highlight",
-  "main": "index.js",
-  "module": "index.js",
+  "main": "dist/index.js",
+  "module": "esm/index.js",
   "type": "module",
+  "types": "dist/src/index.d.ts",
   "author": "Highlight",
   "license": "MIT",
   "scripts": {
-    "format": "yarn prettier --write ."
+    "format": "yarn prettier --write .",
+    "build": "run-p build:cjs build:esm",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:dev": "run-s build",
+    "build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
+    "build:esm": "tsc -p tsconfig.esm.json"
   },
-  "bin": "./index.js",
   "devDependencies": {
-    "@types/yargs": "^17.0.0"
+    "@types/glob": "^8.0.0",
+    "@types/node-fetch": "^2.6.2",
+    "@types/yargs": "^17.0.0",
+    "npm-run-all": "4.1.5"
   },
   "dependencies": {
+    "@types/node": "17.0.23",
     "aws-sdk": "2.1163.0",
+    "eslint": "8.12.0",
     "glob": "7.2.3",
     "node-fetch": "3.2.10",
+    "typescript": "4.6.3",
     "yargs": "17.5.1"
   }
 }
