working with cjs

--- a/highlight-next/tsconfig.json
+++ b/highlight-next/tsconfig.json
@@ -2,12 +2,14 @@
 	"compilerOptions": {
 		"typeRoots": ["./node_modules/@types"],
 		"types": ["@highlight-run/sourcemap-uploader", "@highlight-run/node"],
-		"target": "ESNext",
+		"target": "ES6",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"module": "ESNext",
+		"module": "CommonJS",
+		"outDir": "dist",
+		"removeComments": true,
 		"declaration": true,
 		"declarationDir": "dist",
 		"moduleResolution": "node",
