--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"@highlight-run/react-mentions": "4.4.1",
 		"@highlight-run/react-select": "^5.2.2",
 		"@highlight-run/rrweb": "workspace:*",
+		"@highlight-run/sourcemap-uploader": "file:.yalc/@highlight-run/sourcemap-uploader",
 		"@rehooks/local-storage": "^2.4.0",
 		"@stripe/stripe-js": "^1.32.0",
 		"@types/react-virtualized-auto-sizer": "^1.0.1",
