--- a/sourcemap-uploader/package.json
+++ b/sourcemap-uploader/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "description": "Command line tool to upload source maps to Highlight",
   "main": "dist/index.js",
+  "bin": "dist/index.js",
   "module": "esm/index.js",
   "types": "dist/src/index.d.ts",
   "author": "Highlight",
