--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "ESNext",
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"module": "esnext",
+		"module": "ESNext",
 		"declaration": true,
 		"declarationDir": "dist",
 		"moduleResolution": "node",
