--- a/highlight-next/tsconfig.esm.json
+++ b/highlight-next/tsconfig.esm.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "ESNext",
 		"outDir": "esm",
 		"removeComments": true
 	},
