--- a/highlight-node/tsconfig.esm.json
+++ b/highlight-node/tsconfig.esm.json
@@ -2,8 +2,9 @@
 	"extends": "./tsconfig.json",
 
 	"compilerOptions": {
-		"module": "es6",
-		"outDir": "esm"
+		"module": "ESNext",
+		"outDir": "esm",
+		"removeComments": true
 	},
 	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
