--- a/sourcemap-uploader/tsconfig.json
+++ b/sourcemap-uploader/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types"],
-    "target": "ESNext",
+    "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
+    "module": "ES6",
     "declaration": true,
     "declarationDir": "dist",
     "moduleResolution": "node",
