--- a/sourcemap-uploader/package.json
+++ b/sourcemap-uploader/package.json
@@ -2,9 +2,10 @@
   "name": "@highlight-run/sourcemap-uploader",
   "version": "0.3.0",
   "description": "Command line tool to upload source maps to Highlight",
-  "main": "esm/src/index.js",
+  "main": "dist/src/index.js",
   "bin": "./esm/src/index.js",
   "module": "esm/src/index.js",
+  "exports": "./esm/src/index.js",
   "types": "dist/src/index.d.ts",
   "author": "Highlight",
   "license": "MIT",
