--- a/highlight-node/tsconfig.esm.json
+++ b/highlight-node/tsconfig.esm.json
@@ -2,7 +2,7 @@
 	"extends": "./tsconfig.json",
 
 	"compilerOptions": {
-		"module": "ESNext",
+		"module": "ES6",
 		"outDir": "esm",
 		"removeComments": true
 	},
