remove dupe options

--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -15,7 +15,8 @@
 		"jsx": "react",
 		"typeRoots": ["./node_modules/@types"],
 		"types": ["node"],
-		"composite": true
+		"composite": true,
+		"removeComments": true
 	},
 	"include": ["src"],
 	"references": [{ "path": "../rrweb/packages/rrweb" }]
