--- a/sourcemap-uploader/tsconfig.cjs.json
+++ b/sourcemap-uploader/tsconfig.cjs.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "dist",
-    "removeComments": true
+    "outDir": "dist"
   }
 }
