--- a/highlight-next/tsconfig.esm.json
+++ b/highlight-next/tsconfig.esm.json
@@ -2,12 +2,6 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"module": "ES6",
-		"outDir": "esm",
-		"removeComments": true
-	},
-	"references": [
-		{ "path": "../rrweb/packages/rrweb" },
-		{ "path": "../highlight-node" },
-		{ "path": "../sourcemap-uploader" }
-	]
+		"outDir": "esm"
+	}
 }
