--- a/highlight-node/tsconfig.esm.json
+++ b/highlight-node/tsconfig.esm.json
@@ -3,8 +3,6 @@
 
 	"compilerOptions": {
 		"module": "ES6",
-		"outDir": "esm",
-		"removeComments": true
-	},
-	"references": [{ "path": "../rrweb/packages/rrweb" }]
+		"outDir": "esm"
+	}
 }
