--- a/sourcemap-uploader/tsconfig.esm.json
+++ b/sourcemap-uploader/tsconfig.esm.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ES6",
-    "outDir": "esm",
-    "removeComments": true
+    "outDir": "esm"
   }
 }
