Revert "remove dupe options"
This reverts commit 3033c05a222917d7c4d43ac586f47994a469f7a1.

--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -15,8 +15,7 @@
 		"jsx": "react",
 		"typeRoots": ["./node_modules/@types"],
 		"types": ["node"],
-		"composite": true,
-		"removeComments": true
+		"composite": true
 	},
 	"include": ["src"],
 	"references": [{ "path": "../rrweb/packages/rrweb" }]
