--- a/highlight-next/tsconfig.cjs.json
+++ b/highlight-next/tsconfig.cjs.json
@@ -2,6 +2,12 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"module": "commonjs",
-		"outDir": "dist"
-	}
+		"outDir": "dist",
+		"removeComments": true
+	},
+	"references": [
+		{ "path": "../rrweb/packages/rrweb" },
+		{ "path": "../highlight-node" },
+		{ "path": "../sourcemap-uploader" }
+	]
 }
