--- a/highlight-next/tsconfig.esm.json
+++ b/highlight-next/tsconfig.esm.json
@@ -2,6 +2,12 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"module": "ES6",
-		"outDir": "esm"
-	}
+		"outDir": "esm",
+		"removeComments": true
+	},
+	"references": [
+		{ "path": "../rrweb/packages/rrweb" },
+		{ "path": "../highlight-node" },
+		{ "path": "../sourcemap-uploader" }
+	]
 }
