--- a/highlight-node/tsconfig.esm.json
+++ b/highlight-node/tsconfig.esm.json
@@ -3,6 +3,8 @@
 
 	"compilerOptions": {
 		"module": "ES6",
-		"outDir": "esm"
-	}
+		"outDir": "esm",
+		"removeComments": true
+	},
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
