--- a/sourcemap-uploader/tsconfig.cjs.json
+++ b/sourcemap-uploader/tsconfig.cjs.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "dist"
+    "outDir": "dist",
+    "removeComments": true
   }
 }
