--- a/sourcemap-uploader/tsconfig.esm.json
+++ b/sourcemap-uploader/tsconfig.esm.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ES6",
-    "outDir": "esm"
+    "outDir": "esm",
+    "removeComments": true
   }
 }
