--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -13,7 +13,7 @@
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"jsx": "react",
-		"typeRoots": ["./node_modules/@types"],
+		"typeRoots": ["../node_modules/@types"],
 		"types": ["node"],
 		"composite": true
 	},
