--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
 	"module": "dist/indexESM.js",
 	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"build": "tsc && rollup -c",
+		"build": "yarn types && rollup -c",
+		"types": "tsc",
 		"dev": "doppler run -- rollup -c -w",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
