--- a/firstload/package.json
+++ b/firstload/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"build": "tsc && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
-		"test": "jest --detectOpenHandles"
+		"test": "jest --detectOpenHandles",
+		"enforce-size": "bundlesize"
 	},
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
@@ -22,6 +23,7 @@
 		"@rollup/plugin-replace": "^4.0.0",
 		"@types/chrome": "^0.0.144",
 		"@types/jest": "^26.0.24",
+		"bundlesize": "^0.18.1",
 		"esbuild": "^0.14.47",
 		"jest": "^27.0.6",
 		"jest-fail-on-console": "^2.0.4",
@@ -34,6 +36,12 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.0.3"
 	},
+	"bundlesize": [
+		{
+			"path": "dist/**.js",
+			"maxSize": "150 kB"
+		}
+	],
 	"setupFiles": [
 		"./tests/jest.overrides.js"
 	]
