--- a/firstload/package.json
+++ b/firstload/package.json
@@ -5,7 +5,8 @@
 		"build": "yarn typegen && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
 		"test": "vitest",
-		"typegen": "tsc"
+		"typegen": "tsc",
+		"enforce-size": "bundlesize"
 	},
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
@@ -17,6 +18,7 @@
 		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@rollup/plugin-replace": "^4.0.0",
 		"@types/chrome": "^0.0.144",
+		"bundlesize": "^0.18.1",
 		"esbuild": "^0.14.47",
 		"rollup": "^2.75.7",
 		"rollup-plugin-consts": "^1.1.0",
@@ -27,5 +29,11 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.0.3",
 		"vitest": "^0.23.4"
-	}
+	},
+	"bundlesize": [
+		{
+			"path": "dist/**.js",
+			"maxSize": "150 kB"
+		}
+	]
 }
