--- a/firstload/package.json
+++ b/firstload/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"build": "tsc && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
-		"test": "jest --detectOpenHandles"
+		"test": "vitest"
 	},
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
@@ -21,10 +21,7 @@
 		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@rollup/plugin-replace": "^4.0.0",
 		"@types/chrome": "^0.0.144",
-		"@types/jest": "^26.0.24",
 		"esbuild": "^0.14.47",
-		"jest": "^27.0.6",
-		"jest-fail-on-console": "^2.0.4",
 		"rollup": "^2.75.7",
 		"rollup-plugin-consts": "^1.1.0",
 		"rollup-plugin-esbuild": "^4.9.1",
@@ -32,9 +29,7 @@
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-web-worker-loader": "^1.6.1",
 		"tslib": "^2.4.0",
-		"typescript": "^4.0.3"
-	},
-	"setupFiles": [
-		"./tests/jest.overrides.js"
-	]
+		"typescript": "^4.0.3",
+		"vitest": "^0.23.4"
+	}
 }
