--- a/highlight-next/tsconfig.json
+++ b/highlight-next/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"typeRoots": ["../node_modules"],
+		"typeRoots": ["./node_modules"],
 		"types": ["@highlight-run/sourcemap-uploader", "@highlight-run/node"],
 		"target": "ES6",
 		"skipLibCheck": true,
