--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -34,7 +34,10 @@ jobs:
                   cache: 'yarn'
 
             - name: Configure yarn npm registry authentication
-              run: yarn config set _authToken ${NPM_TOKEN}
+              run: |
+                  echo 'npmRegistryServer: "https://npm.pkg.github.com"\n' >> .yarnrc
+                  echo "npmAuthToken: \"${NPM_TOKEN}\"\n" >> .yarnrc
+                  cat .yarnrc
               env:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
