fix yarn auth (#3151)
use yarn token v3 syntax
https://yarnpkg.com/configuration/yarnrc#npmAuthToken

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -33,6 +33,14 @@ jobs:
                   node-version: 16
                   cache: 'yarn'
 
+            - name: Configure yarn npm registry authentication
+              run: |
+                  echo 'npmRegistryServer: "https://npm.pkg.github.com"' >> .yarnrc
+                  echo "npmAuthToken: \"${NPM_TOKEN}\"" >> .yarnrc
+                  cat .yarnrc
+              env:
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
             - name: Install js dependencies
               run: yarn
 
