fix: change registry

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -58,7 +58,7 @@ jobs:
 
             - name: Configure yarn npm registry credentials
               run: |
-                  echo 'npmRegistryServer: "https://npm.pkg.github.com"' >> .yarnrc.yml
+                  echo 'npmRegistryServer: "https://registry.npmjs.org"' >> .yarnrc.yml
                   echo "npmAuthToken: \"${NPM_TOKEN}\"" >> .yarnrc.yml
               env:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
