--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"generate": "hygen",
 		"prepare": "husky install && patch-package",
 		"publish:all": "run-p --print-label publish:turbo publish:render",
-		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public && yarn workspace highlight.run npm publish --access public",
+		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
 		"publish:render": "yarn workspace render publish",
 		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
 		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
