--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -64,7 +64,7 @@ jobs:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - name: Publish npm packages
-              run: yarn publish:all
+              run: yarn publish:render
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
