fix js package build and publish (#3152)
## Summary

Removes `changesets` since it does not work well with yarn v3.
Fixes `highlight.run` build breaking due to turborepo cache.
Fixes yarn package publishing in CI due to authentication issues.

## How did you test this change?

Local build after clearing cache.
CI with the master branch checks removed.

## Are there any deployment considerations?

No

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -57,18 +57,16 @@ jobs:
                   aws-region: us-east-2
 
             - name: Configure yarn npm registry credentials
+              if: github.ref == 'refs/heads/master'
               run: |
-                  echo 'npmRegistryServer: "https://npm.pkg.github.com"' >> .yarnrc.yml
-                  echo "npmAuthToken: \"${NPM_TOKEN}\"" >> .yarnrc.yml
+                  yarn config set npmRegistryServer "https://registry.npmjs.org"
+                  yarn config set npmAuthToken "${NPM_TOKEN}"
               env:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - name: Publish npm packages
               if: github.ref == 'refs/heads/master'
-              uses: changesets/action@v1
-              with:
-                  publish: yarn publish:all
+              run: yarn publish:turbo
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-                  GITHUB_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
