--- a/package.json
+++ b/package.json
@@ -40,13 +40,12 @@
 		"generate": "hygen",
 		"prepare": "husky install && patch-package",
 		"publish:all": "run-p --print-label publish:turbo publish:render",
-		"publish:turbo": "changeset version && yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public && yarn workspace highlight.run npm publish --access public && changeset tag",
+		"publish:turbo": "yarn workspaces foreach --no-private --from '@highlight-run/*' npm publish --access public --tolerate-republish && yarn workspace highlight.run npm publish --access public --tolerate-republish",
 		"publish:render": "yarn workspace render publish",
 		"test:all": "yarn turbo run test --filter=!@highlight-run/rrdom --filter=!@highlight-run/rrweb --filter=!@highlight-run/rrweb-snapshot",
 		"sourcemaps:frontend": "yarn workspace @highlight-run/frontend sourcemaps"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.24.4",
 		"chalk": "^5.0.1",
 		"cypress": "^10.8.0",
 		"husky": "^8.0.1",
