--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -3,6 +3,8 @@ on:
     push:
         branches:
             - 'master'
+    pull_request:
+        types: [opened, synchronize]
 jobs:
     push_to_registry:
         name: Push Docker image to Docker Hub
