--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,10 @@
 			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
 			"outputs": ["dist/**/*.d.ts", "typings/**"]
 		},
+		"highlight.run#typegen": {
+			"dependsOn": ["@highlight-run/client#typegen"],
+			"outputs": ["dist/**/*.d.ts", "typings/**"]
+		},
 		"prepublish": {
 			"dependsOn": ["^prepublish"],
 			"outputs": ["lib/**", "es/**", "dist/**", "typings/**"]
