Mock import for consts:publicGraphURI

--- a/turbo.json
+++ b/turbo.json
@@ -43,8 +43,7 @@
 				"LINEAR_CLIENT_ID",
 				"SLACK_CLIENT_ID",
 				"DD_CLIENT_TOKEN",
-				"DD_RUM_APPLICATION_ID",
-				"PUBLIC_GRAPH_URI"
+				"DD_RUM_APPLICATION_ID"
 			]
 		},
 		"test": {
