--- a/highlight-next/tsconfig.json
+++ b/highlight-next/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"types": ["@highlight-run/sourcemap-uploader", "@highlight-run/node"],
 		"target": "ES6",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
