--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -23,6 +23,6 @@
 	"devDependencies": {
 		"@types/node": "17.0.23",
 		"eslint": "8.12.0",
-		"typescript": "4.6.3"
+		"typescript": "^4.8.2"
 	}
 }
