--- a/highlight-node/package.json
+++ b/highlight-node/package.json
@@ -24,8 +24,7 @@
 		"graphql-tag": "2.12.6",
 		"highlight.run": "workspace:*",
 		"lru-cache": "7.3.1",
-		"npm-run-all": "4.1.5",
-		"typescript": "4.5.5"
+		"npm-run-all": "4.1.5"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "2.11.2",
@@ -33,6 +32,7 @@
 		"@graphql-codegen/typescript-graphql-request": "4.5.2",
 		"@graphql-codegen/typescript-operations": "2.5.2",
 		"@types/lru-cache": "5.1.1",
-		"@types/node": "17.0.13"
+		"@types/node": "17.0.13",
+		"typescript": "^4.8.2"
 	}
 }
